Adicionado Google Analytics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Palette+Mosaic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3QE4SV6M27"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-3QE4SV6M27');
+    </script>
 </head>
 <body>
 
@@ -19,24 +29,20 @@
     </div>
     
     <ul class="icones">
-        <li>
-            <a href="">
-                <img src="img/youtube.png" alt="Youtube" target="_blank">            
-            </a>
-        </li>
+       
         <li>
             <a href="http://wa.me/5567992079997" target="_blank"> 
                 <img src="img/whatsapp.png" alt="Whatsapp">            
             </a>
         </li>
         <li>
-            <a href="">
-                <img src="img/github.svg" alt="Github" target="_blank">         
+            <a href="https://github.com/ricardodinizmagro" target="_blank">
+                <img src="img/github.svg" alt="Github">          
             </a>
         </li>
         <li>
-            <a href="">
-                <img src="img/linkedin.svg" alt="Linkedin" target="_blank">            
+            <a href="http://www.linkedin.com/in/ricardo-diniz-magro-484b05195" target="_blank">
+                <img src="img/linkedin.svg" alt="Linkedin">            
             </a>
         </li>
     </ul>
@@ -52,7 +58,18 @@
             <a href="">
                 Fábrica de Aplicativos - React Native
                 <span>Curso de Desenvolvimento de Aplicativos para Iniciantes  (DO ZERO).</span>
-
+            </a>
+        </li>
+        <li>
+            <a href="">
+                Desenvolvimento de Games
+                <span>Curso Completo - Aprenda a Criar e Programar Jogos Completos em 2D e 3D!</span>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                Workshop Gratuito - React Native - do Zero ao App.
+                <span>Aprenda criar aplicativos poderosos para Android e IOS.</span>
             </a>
         </li>
 
